Correctly render line-breaks in div.qt-designer-form-textarea

--- a/components/style/QtDesignerForm.css
+++ b/components/style/QtDesignerForm.css
@@ -215,6 +215,7 @@ div.qt-designer-report select {
 
 div.qt-designer-form-textarea {
     padding: 0.25em;
+    white-space: pre;
 }
 
 div.qt-designer-form-image img {
